Aqua Affinity, and armor toughness fix

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@
 /Drones
 /SpaceCraft
 /.testdims
-/.TinkerTextures/output
 /LapisCore/data/lapis/predicates/step
+/.resourcepack/.TinkerTextures/output
+/.resourcepack/Lapis Resources 2/Lapis Resources 2.zip
